Design tweaks and fixes. - Constraint failure image height. - Fix quiz "try again" feature. - Always redirect to https://tinypowerhouse.org - Make incorrect buttons vertically aligned - Fix fonts - Fix button text being cut off -

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -10,8 +10,14 @@ http://ionicframework.com/docs/theming/ */
   text-align: center;
 }
 
+:host {
+  --ion-default-font: "Montserrat", "Helvetica Neue", sans-serif;
+}
+
 /** Ionic CSS Variables **/
 :root {
+  --ion-font-family: "Montserrat", "Helvetica Neue", sans-serif;
+
   /** primary **/
   --ion-color-primary: #228AD3;
   --ion-color-primary-rgb: 56, 128, 255;
